Fix button overflow for element grounding popovers
Ref : Grounding popover overflow #541

--- a/src/styles/element-info/entity-info.css
+++ b/src/styles/element-info/entity-info.css
@@ -190,3 +190,8 @@ button.entity-info-edit {
 .entity-info-linkout {
   margin-right: 0.5em;
 }
+
+.entity-info-assoc-button {
+  display: inline-block;
+  height: auto;
+}
