--- a/src/styles/element-info/interaction-info.css
+++ b/src/styles/element-info/interaction-info.css
@@ -53,4 +53,9 @@ textarea.interaction-info-description {
 .interaction-info-edit {
   text-align: center;
   margin-top: 1em;
+
+  & button {
+    display: inline-block;
+    height: auto;
+  }
 }
